--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         This is markdown extantion that allows you to create tests for students
     </div>
     <div class="box">
-        <textarea name="exam" id="editor" cols="30" rows="10"></textarea>
         <div class="result result-box">
+            <textarea id="editor" contenteditable="true"></textarea>
             <div id="result"></div>
         </div>
     </div>
@@ -35,6 +35,45 @@
         }
 
         editor.oninput = update;
+        
+        var observe;
+        if (window.attachEvent)
+        {
+            observe = function(element, event, handler)
+            {
+                element.attachEvent('on' + event, handler);
+            };
+        }
+        else
+        {
+            observe = function(element, event, handler)
+            {
+                element.addEventListener(event, handler, false);
+            };
+        }
+
+        var text = document.getElementById('editor');
+
+        function resize()
+        {
+            text.style.height = 'auto';
+            text.style.height = text.scrollHeight + 'px';
+        }
+        /* 0-timeout to get the already changed text */
+        function delayedResize()
+        {
+            window.setTimeout(resize, 0);
+
+        }
+        observe(text, 'change', resize);
+        observe(text, 'cut', delayedResize);
+        observe(text, 'paste', delayedResize);
+        observe(text, 'drop', delayedResize);
+        observe(text, 'keydown', delayedResize);
+
+        text.focus();
+        text.select();
+        resize();
     </script>
 
 </body>
