--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="box">
         <div class="result result-box">
-            <div id="editor" contenteditable="true"></div>
+            <textarea id="editor"></textarea>
             <div id="result"></div>
         </div>
     </div>
@@ -29,7 +29,7 @@
 
         function update()
         {
-            var source = editor.innerHTML.replace(/<br>/g,'\n');
+            var source = editor.value;
             var resultHTML = exam.parse(source);
             resultDiv.innerHTML = resultHTML;
         }
