Split-block was added

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     </div>
     <div class="box">
         <div class="result result-box">
-            <textarea id="editor"></textarea>
-            <div id="result"></div>
+            <textarea id="editor" class="text-pane"></textarea>
+            <div class="split-div">Converts to</div>
+            <div id="result" class="text-pane"></div>
         </div>
     </div>
     <script type="text/javascript" src="build/exam.js"></script>
