--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="build/exam.js"></script>
     <script type="text/javascript">
         var exam = new Exam();
+        exam.setPreprocessor(markdown.toHTML);
         var resultDiv = document.getElementById('result');
         var editor = document.getElementById('editor');
 
