Style for a help popups was added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Exam.js</title>
 </head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/default.css">
 
 <body>
     <div class="top-panel">Exam.js</div>
