--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
     <div class="button" id="finishBtn">Finish</div>
     <div class="answers-box">
-        <div id="answers">0</div>
-        <div id="tests">0</div>
+        <div class="counter" id="answers">Answers: 0</div>
+        <div class="counter" id="tests">0: Tests</div>
     </div>
     <div class="box">
         <div class="result result-box">
@@ -48,8 +48,8 @@
         function checkAnswers(){
             var answersInfo = exam.getAnswersInformation();
             
-            answersDiv.innerHTML = answersInfo.rightAnswers;
-            testsDiv.innerHTML = answersInfo.tests;
+            answersDiv.innerHTML = ('Answers: ' + answersInfo.rightAnswers);
+            testsDiv.innerHTML = (answersInfo.tests + ': Tests');
         }
 
         editor.oninput = update;
