--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="result" class="text-pane"></div>
         </div>
     </div>
-    <script type="text/javascript" src="build/exam.js"></script>
+    <script type="text/javascript" src="dist/exam.js"></script>
     <script type="text/javascript">
         var exam = new Exam({
             finishBtnID : 'finishBtn'
