Displaing of right anwers count was fixed

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
         editor.oninput = update;
         resultDiv.oninput = checkAnswers;
+        resultDiv.onchange = checkAnswers;
     </script>
 
 </body>
