show answers on change

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   editor.oninput = update;
   resultDiv.onkeyup = function(){
-    console.log(examjs);
+    console.log(examjs.answers);
   }
   </script>
 </body>
