--- a/index.html
+++ b/index.html
@@ -33,27 +33,23 @@
   var testsDiv = document.getElementById('tests');
   var errorBox = document.getElementById('error-box');
   var examjs = null;
-  var oldSource = '';
 
   function update() {
-    if (oldSource !== editor.value) {
-      var source = editor.value;
-      try {
-        examjs = parser.parse(source);
-        resultDiv.innerHTML = examjs.html;
-        errorBox.innerHTML = '';
-      } catch (e) {
-        if (e) {
-          errorBox.innerHTML = e;
-        }
+    var source = editor.value;
+    try {
+      examjs = parser.parse(source);
+      resultDiv.innerHTML = examjs.html;
+      errorBox.innerHTML = '';
+    } catch (e) {
+      if (e) {
+        errorBox.innerHTML = e;
       }
-      examjs.initQuestions();
-      oldSource = source;
     }
+    examjs.initQuestions();
   }
 
-  setInterval(update, 500);
-  resultDiv.onkeyup = function() {
+  editor.oninput = update;
+  resultDiv.onkeyup = function(){
     console.log(examjs.answers);
   }
   </script>
