--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="result" class="text-pane"></div>
     </div>
   </div>
-  <script type="text/javascript" src="src/exam.js"></script>
+  <script type="text/javascript" src="dist/exam.js"></script>
   <script type="text/javascript">
   var resultDiv = document.getElementById('result');
   var editor = document.getElementById('editor');
