Math support was added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/exam.css">
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML"></script>
 
 <body>
   <div class="top-panel">Exam.js</div>
@@ -24,6 +25,7 @@
       <textarea id="editor" class="text-pane"></textarea>
       <div id="result" class="text-pane"></div>
     </div>
+    <div> {{sum_(i=1)^n i^3=((n(n+1))/2)^2}}</div>
   </div>
   <script type="text/javascript" src="dist/exam.js"></script>
   <script type="text/javascript">
