--- a/index.html
+++ b/index.html
@@ -7,52 +7,142 @@
 </head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/exam.css">
+<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin,cyrillic'
+rel='stylesheet' type='text/css'>
 <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML"></script>
 
 <body>
-  <div class="button" id="finishBtn">Finish</div>
-  <div class="answers-box">
-    <div class="counter" id="answers">Answers: 0</div>
-    <div class="counter" id="tests">Tests: 0</div>
-    <div id="error-box" style="color: #FF4C4C"></div>
-  </div>
-  <div class="box">
-    <div class="result result-box">
-      <textarea id="editor" class="text-pane"></textarea>
-      <div id="result" class="text-pane"></div>
+  <div class="navbar">
+    <div class="answers-box">
+      <div class="answers-box-content">
+        <div class="counter" id="answers">Правильных ответов: 0</div>
+        <div class="counter" id="tests">Тестов: 0</div>
+      </div>
     </div>
+  </div>
+  <div class="promo">
+    <div class="promo-content">
+      <p>Exam.js - язык разметки интерактивных тестовых заданий с поддержкой <a href="https://ru.wikipedia.org/wiki/Markdown">Markdown</a>
+        и <a href="http://asciimath.org/">AsciiMath</a>, парсер которого написан
+        на JavaScript</p>
+      <div class="service-buttons">
+        <a class="github-button" href="https://github.com/NightingaleStudio/exam.js" data-icon="octicon-eye"
+        data-style="mega" data-count-href="/NightingaleStudio/exam.js/watchers"
+        data-count-api="/repos/NightingaleStudio/exam.js#subscribers_count" data-count-aria-label="# watchers on GitHub"
+        aria-label="Watch NightingaleStudio/exam.js on GitHub">Watch</a>
+        <a class="github-button" href="https://github.com/NightingaleStudio/exam.js" data-icon="octicon-star"
+        data-style="mega" data-count-href="/NightingaleStudio/exam.js/stargazers"
+        data-count-api="/repos/NightingaleStudio/exam.js#stargazers_count" data-count-aria-label="# stargazers on GitHub"
+        aria-label="Star NightingaleStudio/exam.js on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/NightingaleStudio/exam.js/fork"
+        data-icon="octicon-repo-forked" data-style="mega" data-count-href="/NightingaleStudio/exam.js/network"
+        data-count-api="/repos/NightingaleStudio/exam.js#forks_count" data-count-aria-label="# forks on GitHub"
+        aria-label="Fork NightingaleStudio/exam.js on GitHub">Fork</a>
+        <a class="github-button" href="https://github.com/NightingaleStudio/exam.js/issues"
+        data-icon="octicon-issue-opened" data-style="mega" data-count-api="/repos/NightingaleStudio/exam.js#open_issues_count"
+        data-count-aria-label="# issues on GitHub" aria-label="Issue NightingaleStudio/exam.js on GitHub">Issue</a>
+      </div>
+      <div class="service-buttons">
+       <a href="https://travis-ci.org/NightingaleStudio/exam.js"><img src="https://camo.githubusercontent.com/12c508571dbbfaee2602acf27411bd84af1ed2d3/68747470733a2f2f7472617669732d63692e6f72672f4e69676874696e67616c6553747564696f2f6578616d2e6a732e7376673f6272616e63683d6d6173746572" alt="Build Status" data-canonical-src="https://travis-ci.org/NightingaleStudio/exam.js.svg?branch=master" style="max-width:100%;"></a>
+       <a href="https://codeclimate.com/github/NightingaleStudio/exam.js"><img src="https://camo.githubusercontent.com/c58d51e088b10925a78eec8ae0907837849e1aea/68747470733a2f2f636f6465636c696d6174652e636f6d2f6769746875622f4e69676874696e67616c6553747564696f2f6578616d2e6a732f6261646765732f6770612e737667" alt="Code Climate" data-canonical-src="https://codeclimate.com/github/NightingaleStudio/exam.js/badges/gpa.svg" style="max-width:100%;"></a>
+      </div>
+      <div>
+        Редактируйте слева, проходите тесты справа
+      </div>
+    </div>
+  </div>
+  <div class="result result-box">
+    <textarea id="editor" class="text-pane text-pane-left">
+###Exam.js
+---
+**Exam.js** - это библиотека, которая позволит добавить вам возможность создания интерактивных тестов на свой сайт.
+
+При помощи данной библиотеки вы сможете:
+
+- использовать язык разметки Markdown для описания ваших заданий;
+- писать сложные математические формулы (например, такие {{sum_(i=1)^n i^3=((n(n+1))/2)^2}}), используя простой язык [AsciiMath](http://asciimath.org/);
+- создавать интерактивные тесты различных медиа типов (текст, изображение, видео, аудио), на языке приближенному к естественному;
+
+Для создания тестов вам нужно всего лишь объявить секцию тестов, объявить тип вопросов, после чего написать текст вопроса и варианты ответов. Каждый вариант ответа нужно ометить - (неправильные) или + (правильные).
+
+ТЕСТЫ
+ТЕКСТ
+
+Нравится ли вам эта библиотека?
++да
+
+Если {{A = ((-1,2),(4,-5)), B = ((1,-1),(0,2))}}, то матрица {{C = 2A - B}} имеет вид:
++{{((-3,5),(8,-12))}}
+-{{((-1,3),(8,-8))}}
+-{{((-3,5),(4,-7))}}
++{{((0,3),(0,-12))}}
+
+РИСУНОК
+
+На каком рисунке изображен график функции {{y = sin(x)}}?
+-http://dl2.joxi.net/drive/0001/2547/129523/150527/27d5954b08.jpg
++http://dl1.joxi.net/drive/0001/2547/129523/150527/af2ed6be13.jpg
+
+На какой картинке изображен А.С. Пушкин?
+-https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Fet_by_Repin.jpg/267px-Fet_by_Repin.jpg
+-https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Fyodor_Tyutchev.jpg/250px-Fyodor_Tyutchev.jpg
++https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Portrait_of_Alexander_Pushkin_%28Orest_Kiprensky%2C_1827%29.PNG/250px-Portrait_of_Alexander_Pushkin_%28Orest_Kiprensky%2C_1827%29.PNG
+-https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Mikhail_lermontov.jpg/267px-Mikhail_lermontov.jpg
+
+АУДИО
+Какое из этих произведений является Лунной сонатой Бетховена?
+-http://www.audiopoisk.com/file/IVQb4Lev9v/vol_fgang-amadei-mocart/muzika-angelov-2157447.mp3
++http://www.audiopoisk.com/file/IVQb4Lev9v/ludvig-van-bethoven/ludvg-van-bethoven-lunnaa-sonata-1331614.mp3
+
+ВИДЕО
+В каком видео представлен курс MIT по компьютерным системам?
+-https://youtu.be/wwNifiQw0Tc?list=PLl2Nhv7V2f5_GPjfZ9ui8iYc5DLTQcqBD
++https://youtu.be/GqmQg-cszw4?list=PLUl4u3cNGP62K2DjQLRxDNRi0z2IRWnNh
+
+КОНЕЦ ТЕСТОВ
+
+---
+*\*Секций с тестами может быть неограниченное количество в рамках одного исходного текста*
+
+    </textarea>
+    <div id="result" class="text-pane text-pane-right"></div>
   </div>
   <script type="text/javascript" src="dist/exam.js"></script>
   <script type="text/javascript">
-  var resultDiv = document.getElementById('result');
-  var editor = document.getElementById('editor');
-  var answersDiv = document.getElementById('answers');
-  var testsDiv = document.getElementById('tests');
-  var errorBox = document.getElementById('error-box');
-  var exam = null;
+    var resultDiv = document.getElementById('result');
+    var editor = document.getElementById('editor');
+    var answersDiv = document.getElementById('answers');
+    var testsDiv = document.getElementById('tests');
+    var errorBox = document.getElementById('error-box');
+    var exam;
 
-  function update() {
-    var source = editor.value;
-    try {
-      exam = parser.parse(source);
-      resultDiv.innerHTML = exam.html;
-      errorBox.innerHTML = '';
-    } catch (e) {
-      if (e) {
-        errorBox.innerHTML = e;
+    var updateAnswers = function()
+    {
+      var results = exam.getResults();
+      answersDiv.innerHTML = 'Правильных ответов: ' + results.rightAnswersCount;
+      testsDiv.innerHTML = 'Тестов: ' + results.questionsCount;
+    };
+
+    var update = function()
+    {
+      var source = editor.value;
+      try
+      {
+        exam = parser.parse(source);
+        resultDiv.innerHTML = exam.html;
       }
+      catch (e)
+      {}
+      exam.initQuestions();
+      updateAnswers();
     }
-    exam.initQuestions();
-  }
-
-  editor.oninput = update;
-  resultDiv.onchange = function(){
-    var results = exam.getResults();
-    answersDiv.innerHTML = 'Answers: ' + results.rightAnswersCount;
-    testsDiv.innerHTML = 'Tests: ' + results.questionsCount;
-    console.log(results);
-  }
+    update();
+    editor.oninput = update;
+    resultDiv.onchange = updateAnswers;
+    resultDiv.onkeyup = updateAnswers;
   </script>
+  <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
+
