--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@ rel='stylesheet' type='text/css'>
 - писать сложные математические формулы (например, такие {{sum_(i=1)^n i^3=((n(n+1))/2)^2}}), используя простой язык [AsciiMath](http://asciimath.org/);
 - создавать интерактивные тесты различных медиа типов (текст, изображение, видео, аудио), на языке приближенному к естественному;
 
+####Установка
+
+    npm i exam.js
+
+####Подключение
+
+Для начала работы нужно подключить скрипт **exam.js** или **exam.min.js**, а так же стиль **exam.css**.
+
+    var examjs = parser.parse(source);
+    examjs.html // результирующий HTML,
+                //нужно поместить в любой тэг DOM'a
+    ...
+
+    examjs.initQuestions(); //инициализация вопросов
+
 Для создания тестов вам нужно всего лишь объявить секцию тестов, объявить тип вопросов, после чего написать текст вопроса и варианты ответов. Каждый вариант ответа нужно ометить - (неправильные) или + (правильные).
 
 ТЕСТЫ
@@ -103,9 +118,6 @@ rel='stylesheet' type='text/css'>
 
 ---
 *\*Секций с тестами может быть неограниченное количество в рамках одного исходного текста*
-
-
-
     </textarea>
     <div id="result" class="text-pane text-pane-right"></div>
   </div>
