add test for youtube video creator

--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@ rel='stylesheet' type='text/css'>
   <div class="promo">
     <div class="promo-content">
       <p>Exam.js - язык разметки интерактивных тестовых заданий с поддержкой <a href="https://ru.wikipedia.org/wiki/Markdown">Markdown</a>
-        и <a href="http://asciimath.org/">AsciiMath</a>, парсер которого написан
-<<<<<<< HEAD
-        на JavaScript</p>
-=======
-        на JavaScript и <a href="http://zaach.github.io/jison/">Jison</a></p>
->>>>>>> gh-pages
+        и <a href="http://asciimath.org/">AsciiMath</a>, парсер которого написан на JavaScript и <a href="http://zaach.github.io/jison/">Jison</a></p>
       <div class="service-buttons">
         <a class="github-button" href="https://github.com/NightingaleStudio/exam.js" data-icon="octicon-eye"
         data-style="mega" data-count-href="/NightingaleStudio/exam.js/watchers"
