--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ rel='stylesheet' type='text/css'>
 - писать сложные математические формулы (например, такие {{sum_(i=1)^n i^3=((n(n+1))/2)^2}}), используя простой язык [AsciiMath](http://asciimath.org/);
 - создавать интерактивные тесты различных медиа типов (текст, изображение, видео, аудио), на языке приближенному к естественному;
 
-Для создания тестов вам нужно всего лишь объявить секцию тестов, объявить тип вопросов, после чего написать текст вопроса и варианты ответов. Каждый вариант ответа нужно ометить - (неправильные) или + (правильные).
+Для создания тестов вам нужно всего лишь объявить секцию тестов, объявить тип вопросов, после чего написать текст вопроса и варианты ответов. Каждый вариант ответа нужно отметить - (неправильные) или + (правильные).
 
 ТЕСТЫ
 ТЕКСТ
