chnage site style

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/exam.css">
-<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin,cyrillic'
-rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML"></script>
 
 <body>
@@ -22,31 +21,31 @@ rel='stylesheet' type='text/css'>
   </div>
   <div class="promo">
     <div class="promo-content">
-      <p>Exam.js - язык разметки интерактивных тестовых заданий с поддержкой <a href="https://ru.wikipedia.org/wiki/Markdown">Markdown</a>
-        и <a href="http://asciimath.org/">AsciiMath</a>, парсер которого написан на JavaScript и <a href="http://zaach.github.io/jison/">Jison</a></p>
       <div class="service-buttons">
-        <a class="github-button" href="https://github.com/NightingaleStudio/exam.js" data-icon="octicon-eye"
-        data-style="mega" data-count-href="/NightingaleStudio/exam.js/watchers"
-        data-count-api="/repos/NightingaleStudio/exam.js#subscribers_count" data-count-aria-label="# watchers on GitHub"
-        aria-label="Watch NightingaleStudio/exam.js on GitHub">Watch</a>
-        <a class="github-button" href="https://github.com/NightingaleStudio/exam.js" data-icon="octicon-star"
-        data-style="mega" data-count-href="/NightingaleStudio/exam.js/stargazers"
-        data-count-api="/repos/NightingaleStudio/exam.js#stargazers_count" data-count-aria-label="# stargazers on GitHub"
-        aria-label="Star NightingaleStudio/exam.js on GitHub">Star</a>
-        <a class="github-button" href="https://github.com/NightingaleStudio/exam.js/fork"
-        data-icon="octicon-repo-forked" data-style="mega" data-count-href="/NightingaleStudio/exam.js/network"
-        data-count-api="/repos/NightingaleStudio/exam.js#forks_count" data-count-aria-label="# forks on GitHub"
-        aria-label="Fork NightingaleStudio/exam.js on GitHub">Fork</a>
-        <a class="github-button" href="https://github.com/NightingaleStudio/exam.js/issues"
-        data-icon="octicon-issue-opened" data-style="mega" data-count-api="/repos/NightingaleStudio/exam.js#open_issues_count"
-        data-count-aria-label="# issues on GitHub" aria-label="Issue NightingaleStudio/exam.js on GitHub">Issue</a>
+
       </div>
       <div class="service-buttons">
-       <a href="https://travis-ci.org/NightingaleStudio/exam.js"><img src="https://camo.githubusercontent.com/12c508571dbbfaee2602acf27411bd84af1ed2d3/68747470733a2f2f7472617669732d63692e6f72672f4e69676874696e67616c6553747564696f2f6578616d2e6a732e7376673f6272616e63683d6d6173746572" alt="Build Status" data-canonical-src="https://travis-ci.org/NightingaleStudio/exam.js.svg?branch=master" style="max-width:100%;"></a>
-       <a href="https://codeclimate.com/github/NightingaleStudio/exam.js"><img src="https://codeclimate.com/github/NightingaleStudio/exam.js/badges/gpa.svg" /></a>
-       <a href="https://codeclimate.com/github/NightingaleStudio/exam.js/coverage"><img src="https://codeclimate.com/github/NightingaleStudio/exam.js/badges/coverage.svg" /></a>
+        <div>
+           <a class="github-button" href="https://github.com/NightingaleStudio/exam.js" data-icon="octicon-eye" data-style="mega" data-count-href="/NightingaleStudio/exam.js/watchers" data-count-api="/repos/NightingaleStudio/exam.js#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch NightingaleStudio/exam.js on GitHub">Watch</a>
+          <a class="github-button" href="https://github.com/NightingaleStudio/exam.js" data-icon="octicon-star" data-style="mega" data-count-href="/NightingaleStudio/exam.js/stargazers" data-count-api="/repos/NightingaleStudio/exam.js#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star NightingaleStudio/exam.js on GitHub">Star</a>
+          <a class="github-button" href="https://github.com/NightingaleStudio/exam.js/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/NightingaleStudio/exam.js/network" data-count-api="/repos/NightingaleStudio/exam.js#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork NightingaleStudio/exam.js on GitHub">Fork</a>
+          <a class="github-button" href="https://github.com/NightingaleStudio/exam.js/issues" data-icon="octicon-issue-opened" data-style="mega" data-count-api="/repos/NightingaleStudio/exam.js#open_issues_count" data-count-aria-label="# issues on GitHub" aria-label="Issue NightingaleStudio/exam.js on GitHub">Issue</a>
+        </div>
+        <div>
+          <a href="https://travis-ci.org/NightingaleStudio/exam.js">
+            <img src="https://camo.githubusercontent.com/12c508571dbbfaee2602acf27411bd84af1ed2d3/68747470733a2f2f7472617669732d63692e6f72672f4e69676874696e67616c6553747564696f2f6578616d2e6a732e7376673f6272616e63683d6d6173746572" alt="Build Status" data-canonical-src="https://travis-ci.org/NightingaleStudio/exam.js.svg?branch=master" style="max-width:100%;">
+          </a>
+          <a href="https://codeclimate.com/github/NightingaleStudio/exam.js">
+            <img src="https://codeclimate.com/github/NightingaleStudio/exam.js/badges/gpa.svg" />
+          </a>
+          <a href="https://codeclimate.com/github/NightingaleStudio/exam.js/coverage">
+            <img src="https://codeclimate.com/github/NightingaleStudio/exam.js/badges/coverage.svg" />
+          </a>
+        </div>
       </div>
-      <div>
+      <img src="./exam-js.png" alt="logo" class="logo">
+      <div class="title">Exam.js</div>
+      <div class="promo-text">
         Редактируйте слева, проходите тесты справа
       </div>
     </div>
@@ -55,12 +54,12 @@ rel='stylesheet' type='text/css'>
     <textarea id="editor" class="text-pane text-pane-left">
 ###Exam.js
 ---
-**Exam.js** - это библиотека, которая позволит добавить вам возможность создания интерактивных тестов на свой сайт.
+**Exam.js** - язык разметки интерактивных тестов с поддержкой [Markdown](https://ru.wikipedia.org/wiki/Markdown) и [Asciimath](http://asciimath.org/), парсер которого написан на JavaScript и [Jison](http://zaach.github.io/jison/)
 
 При помощи данной библиотеки вы сможете:
 
 - использовать язык разметки Markdown для описания ваших заданий;
-- писать сложные математические формулы (например, такие {{sum_(i=1)^n i^3=((n(n+1))/2)^2}}), используя простой язык [AsciiMath](http://asciimath.org/);
+- писать сложные математические формулы (например, такие {{sum_(i=1)^n i^3=((n(n+1))/2)^2}}), используя простой язык AsciiMath;
 - создавать интерактивные тесты различных медиа типов (текст, изображение, видео, аудио), на языке приближенному к естественному;
 
 Для создания тестов вам нужно всего лишь объявить секцию тестов, объявить тип вопросов, после чего написать текст вопроса и варианты ответов. Каждый вариант ответа нужно отметить - (неправильные) или + (правильные).
@@ -119,50 +118,50 @@ rel='stylesheet' type='text/css'>
 
     examjs.initQuestions(); //инициализация вопросов
 
+
+
+
     </textarea>
     <div id="result" class="text-pane text-pane-right"></div>
   </div>
   <script type="text/javascript" src="dist/exam.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
   <script type="text/javascript">
-    var resultDiv = document.getElementById('result');
-    var editor = document.getElementById('editor');
-    var answersDiv = document.getElementById('answers');
-    var testsDiv = document.getElementById('tests');
-    var errorBox = document.getElementById('error-box');
-    var exam;
+  var resultDiv = document.getElementById('result');
+  var editor = document.getElementById('editor');
+  var answersDiv = document.getElementById('answers');
+  var testsDiv = document.getElementById('tests');
+  var errorBox = document.getElementById('error-box');
+  var exam;
 
-    $('.text-pane').on('scroll', function () {
-     $('body').scrollTop($(this).scrollTop());
-    });
-
-    var updateAnswers = function()
-    {
-      var results = exam.getResults();
-      answersDiv.innerHTML = 'Правильных ответов: ' + results.rightAnswersCount;
-      testsDiv.innerHTML = 'Тестов: ' + results.questionsCount;
-    };
-
-    var update = function()
-    {
-      var source = editor.value;
-      try
-      {
-        exam = parser.parse(source);
-        resultDiv.innerHTML = exam.html;
-      }
-      catch (e)
-      {}
-      exam.initQuestions();
-      updateAnswers();
+  $('.text-pane').on('scroll', function() {
+    if (!($(window).scrollTop() + $(window).height() == $(document).height())) {
+      $('body').scrollTop($('body').scrollTop() + 20);
+      $(this).scrollTop($(this).scrollTop);
     }
-    update();
-    editor.oninput = update;
-    resultDiv.onchange = updateAnswers;
-    resultDiv.onkeyup = updateAnswers;
+  });
+
+  var updateAnswers = function() {
+    var results = exam.getResults();
+    answersDiv.innerHTML = 'Правильных ответов: ' + results.rightAnswersCount;
+    testsDiv.innerHTML = 'Тестов: ' + results.questionsCount;
+  };
+
+  var update = function() {
+    var source = editor.value;
+    try {
+      exam = parser.parse(source);
+      resultDiv.innerHTML = exam.html;
+    } catch (e) {}
+    exam.initQuestions();
+    updateAnswers();
+  }
+  update();
+  editor.oninput = update;
+  resultDiv.onchange = updateAnswers;
+  resultDiv.onkeyup = updateAnswers;
   </script>
   <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
-
