--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
           <a href="https://codeclimate.com/github/NightingaleStudio/exam.js/coverage">
             <img src="https://codeclimate.com/github/NightingaleStudio/exam.js/badges/coverage.svg" />
           </a>
+          <a href="https://github.com/NightingaleStudio/exam.js/issues">
+            <img src="http://isitmaintained.com/badge/resolution/NightingaleStudio/exam.js.svg" />
+          </a>
+          <a href="https://github.com/NightingaleStudio/exam.js/issues">
+            <img src="http://isitmaintained.com/badge/open/NightingaleStudio/exam.js.svg" />
+          </a>
         </div>
       </div>
       <img src="./exam-js.png" alt="logo" class="logo">
